--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -41,11 +41,11 @@
                 </span>
             </div>
 
-            <!-- <p-divider align="center" type="dotted">
+            <p-divider align="center" type="dotted">
                 <b>Enter CAPTCHA</b>
             </p-divider>
-            <label for="reCAPTCHA" class="block text-900 font-medium mb-2"></label> -->
-            <!-- <div class="grid">
+            <label for="reCAPTCHA" class="block text-900 font-medium mb-2"></label>
+           <div class="grid">
                 <div class="col-6">
                     <div
                         class="flex justify-content-between align-items-center p-3 bg-yellow-100 border-round text-yellow-800">
@@ -56,16 +56,15 @@
                 <div class="col-6">
                     <p-iconField iconPosition="right">
                         <p-inputIcon [styleClass]="captchaImageClass" />
-                        <input id="reCAPTCHA" type="text" placeholder="Enter here" (keyup)="onCaptchaInputChange($event)" [(ngModel)]="userInput" pInputText
+                        <input  id="reCAPTCHA" type="text" placeholder="Enter here" (keyup)="onCaptchaInputChange($event)" [(ngModel)]="userInput" pInputText
                             class="w-full mb-3" [ngClass]="{'ng-invalid ng-dirty p-shake': captchaError}" />
                     </p-iconField>
                 </div>
-            </div> -->
+            </div>
 
-            <button [loading]="isLoggedIn" pButton pRipple label="Sign In"
+            <button [disabled]="!userInput.length" [loading]="isLoggedIn" pButton pRipple label="Sign In"
                 icon="pi pi-sign-in" iconPos="right" class="w-full" autofocus (click)="validateForm()"></button>
         </div>
     </div>
 </div>
 
-<!-- [disabled]="!userInput.length" -->
