--- a/src/app/shared/components/generic-dialog/generic-dialog.component.html
+++ b/src/app/shared/components/generic-dialog/generic-dialog.component.html
@@ -111,7 +111,7 @@
                 @case ('file') {
                 <ng-container>
                     <p-fileUpload name="file" (onSelect)="onSelect($event, field)" [multiple]="false" [auto]="true"
-                        accept=".txt" maxFileSize="1000000">
+                        accept=".txt, .csv" maxFileSize="1000000">
                         <ng-template pTemplate="empty">
                             <div class="flex align-items-center justify-content-center flex-column">
                                 <i
