mainenance firebase setrup and configured

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -3,7 +3,7 @@
         <ng-template pTemplate="start">
             <div class="flex justify-content-center align-items-center font-bold text-3xl">
                 <p-avatar image="assets/images/logo.png" styleClass="mr-2" size="xlarge" />
-                <span>VAHAN SAATHI</span>
+                <span>GRL</span>
             </div>
         </ng-template>
         <ng-template pTemplate="item" let-item let-root="root">
