--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -3,7 +3,7 @@
         <div class="text-center mb-5">
             <span class="inline-flex align-items-center gap-1 px-2 py-2">
                 <img src="assets/images/logo.png" alt="logo" height="80" width="80"     />
-                <span class="font-medium text-xl font-semibold">VAHAN<span class="text-primary"> SATHI</span></span>
+                <span class="font-medium text-xl font-semibold"><span class="text-primary">GRL</span></span>
             </span>
             <!-- <span class="text-600 font-medium line-height-3">Don't have an account?</span>
             <a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer">Create today!</a> -->
